--- a/app/views/top_pages/index.html.erb
+++ b/app/views/top_pages/index.html.erb
@@ -1,7 +1,49 @@
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
-
-<button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2">tailwind</button>
-
-<button class="btn">daisyUI</button>
+<div class="hero my-12 min-h-max bg-base-100">
+  <div class="hero-content text-center">
+    <div class="max-w-md">
+      <h1 class="text-5xl font-bold">肝ログ</h1>
+      <h2 class="text-2xl">LiverLog</h2>
+      <p class="py-8">肝ログ（LiverLog）は、休肝日と飲酒日を記録することで、飲酒管理ができるサービスです。</p>
+      <button class="btn btn-primary">LINEでログイン</button>
+    </div>
+  </div>
+</div>
+<div class="overflow-hidden bg-base-100 py-12 sm:py-24">
+  <div class="mx-auto max-w-7xl px-6 lg:px-8">
+    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
+      <div class="lg:pr-8 lg:pt-4">
+        <div class="lg:max-w-lg">
+          <h2 class="text-base font-semibold leading-7 text-primary">For you who want to drink in moderation</h2>
+          <p class="mt-2 text-3xl font-bold tracking-tight text-neutral-900 sm:text-4xl">健康を意識して適度に飲酒したいあなたへ</p>
+          <p class="mt-6 text-lg leading-8 text-neutral-600">肝ログは、日常の飲酒習慣を管理し、健康的な飲酒生活をサポートするできるようなサービスです</p>
+          <dl class="mt-8 max-w-xl space-y-5 text-base leading-7 text-neutral-600 lg:max-w-none">
+            <div class="relative pl-9">
+              <dt class="inline font-semibold text-neutral-900">
+                休肝日&飲酒記録の登録
+              </dt>
+              <br>
+              <dd class="inline">簡単に休肝日または飲酒日を記録できます</dd>
+              <br>
+              <dd class="inline">入力したお酒の量（ml）、アルコール度数（%）から、アルコール摂取量を自動で計算できます</dd>
+            </div>
+            <div class="relative pl-9">
+              <dt class="inline font-semibold text-gray-900">
+                休肝日のリマインダー機能
+              </dt>
+              <br>
+              <dd class="inline">あらかじめ登録された休肝日にLINEでリマインダーを送ります</dd>
+            </div>
+            <div class="relative pl-9">
+              <dt class="inline font-semibold text-gray-900">
+                友人や家族と休肝日&飲酒記録の共有機能
+              </dt>
+              <br>
+              <dd class="inline">友人や家族と休肝日と飲酒記録の共有し、あなたの飲酒状況を見守れます</dd>
+            </div>
+          </dl>
+        </div>
+      </div>
+      <%= image_tag "toppage_sample.jpg", class: "w-[48rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0" %>
+    </div>
+  </div>
+</div>
