Create:ヘッダーとフッターの作成

--- a/app/views/top_pages/index.html.erb
+++ b/app/views/top_pages/index.html.erb
@@ -10,29 +10,28 @@
 </div>
 <div class="max-w-full overflow-hidden bg-base-100 py-12 sm:py-24">
   <div class="mx-8 max-w-full rounded-xl bg-white p-6 shadow-xl lg:p-8">
-    <h2 class="text-base font-semibold leading-7 text-primary">For you who want to drink in moderation</h2>
-    <p class="mt-2 text-3xl font-bold tracking-tight text-neutral-900 sm:text-4xl">健康を意識して適度に飲酒したいあなたへ</p>
-    <p class="mt-6 text-lg leading-8 text-neutral-600">肝ログは、日常の飲酒習慣を管理し、健康的な飲酒生活をサポートするできるようなサービスです</p>
+    <div class="mb-6 text-center lg:mb-8">
+      <h2 class="text-base font-semibold leading-7 text-primary">For you who want to drink in moderation</h2>
+      <p class="mt-2 text-3xl font-bold tracking-tight text-neutral-900 sm:text-4xl">健康を意識して適度に飲酒したいあなたへ</p>
+      <p class="mt-6 text-lg leading-8 text-neutral-600">肝ログは、日常の飲酒習慣を管理し、健康的な飲酒生活をサポートするできるようなサービスです</p>
+    </div>
     <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
       <div class="lg:pr-8 lg:pt-4">
         <div class="lg:max-w-full">
-          <dl class="mt-8 max-w-full space-y-5 text-base leading-7 text-neutral-600 lg:max-w-none">
-            <div class="relative pl-9">
-              <dt class="inline font-semibold text-neutral-900">休肝日&飲酒記録の登録</dt>
-              <br />
-              <dd class="inline">簡単に休肝日または飲酒日を記録できます</dd>
-              <br />
-              <dd class="inline">入力したお酒の量（ml）、アルコール度数（%）から、アルコール摂取量を自動で計算できます</dd>
+          <dl class="max-w-full space-y-5 text-base leading-7 text-neutral-600 lg:max-w-none">
+            <h2 class="mt-2 text-2xl font-bold tracking-tight text-neutral-900 sm:text-lg">主な機能</h2>
+            <div>
+              <dt class="font-semibold text-neutral-900">休肝日&飲酒記録の登録</dt>
+              <dd class="pl-6">簡単に休肝日または飲酒日を記録できます</dd>
+              <dd class="pl-6">入力したお酒の量（ml）、アルコール度数（%）から、アルコール摂取量を自動で計算できます</dd>
             </div>
-            <div class="relative pl-9">
-              <dt class="inline font-semibold text-gray-900">休肝日のリマインダー機能</dt>
-              <br />
-              <dd class="inline">あらかじめ登録された休肝日にLINEでリマインダーを送ります</dd>
+            <div>
+              <dt class="font-semibold text-neutral-900">休肝日のリマインダー機能</dt>
+              <dd class="pl-6">あらかじめ登録された休肝日にLINEでリマインダーを送ります</dd>
             </div>
-            <div class="relative pl-9">
-              <dt class="inline font-semibold text-gray-900">友人や家族と休肝日&飲酒記録の共有機能</dt>
-              <br />
-              <dd class="inline">友人や家族と休肝日と飲酒記録の共有し、あなたの飲酒状況を見守れます</dd>
+            <div>
+              <dt class="font-semibold text-neutral-900">友人や家族と休肝日&飲酒記録の共有機能</dt>
+              <dd class="pl-6">友人や家族と休肝日と飲酒記録の共有し、あなたの飲酒状況を見守れます</dd>
             </div>
           </dl>
         </div>
