--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -4,10 +4,10 @@
   </div>
   <div class="navbar-end">
     <ul class="menu menu-horizontal invisible px-1 md:visible">
+      <li><a>トップページ</a></li>
       <li><a>コミュニティ</a></li>
-      <li><a>グループ</a></li>
     </ul>
-    <a class="btn btn-secondary">記録</a>
+    <%= link_to "LINEでログイン", auth_at_provider_path(provider: :line), class: "btn btn-primary" %>
   </div>
   <div class="dropdown dropdown-end">
     <div class="flex-none md:hidden">
@@ -15,8 +15,8 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"></path></svg>
       </button>
       <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
+        <li><a>トップページ</a></li>
         <li><a>コミュニティ</a></li>
-        <li><a>グループ</a></li>
       </ul>
     </div>
   </div>
