Update:初回ログイン後の処理

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,14 +7,27 @@
       <li><a>コミュニティ</a></li>
       <li><a>グループ</a></li>
     </ul>
-    <a class="btn btn-secondary">記録</a>
-  </div>
-  <div class="dropdown dropdown-end">
+    <a class="btn btn-accent">記録</a>
+    <div class="dropdown dropdown-end">
+      <div class="flex-none">
+        <label tabindex="0" class="btn btn-ghost btn-circle avatar mx-4">
+          <div class="max-h-full rounded-full">
+            <%= image_tag current_user.image %>
+          </div>
+        </label>
+        <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
+          <li><a>マイページ</a></li>
+        </ul>
+      </div>
+    </div>
     <div class="flex-none md:hidden">
-      <button class="btn btn-square btn-ghost">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"></path></svg>
-      </button>
+      <label tabindex="0" class="btn btn-ghost btn-circle avatar mx-2">
+        <div class="max-h-full rounded-full">
+          <%= image_tag current_user.image %>
+        </div>
+      </label>
       <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
+        <li><a>マイページ</a></li>
         <li><a>コミュニティ</a></li>
         <li><a>グループ</a></li>
       </ul>
