--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <p>Copyright © 2023 - All right reserved</p>
   </aside> 
   <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
-    <a>利用規約</a>
-    <a>プライバシーポリシー</a>
+    <a><%= t 'defaults.terms_of_service' %></a>
+    <a><%= t 'defaults.privacy_policy' %></a>
   </nav>
 </footer>
