--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-auto max-w-4xl overflow-hidden bg-base-100 py-4 sm:px-24 sm:py-24">
   <div class="card mx-8 max-w-full rounded-xl bg-white shadow-xl">
     <div class="card-body mx-auto items-center text-center">
-      <h2 class="card-title">プロフィール編集</h2>
+      <h2 class="card-title"><%= t '.title' %></h2>
       <%= render partial: 'shared/form', locals: {user: @user, url: profile_path} %>
     </div>
   </div>
