--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -10,7 +10,7 @@
           </div>
           <div class="pl-6">
             <div>
-              <p>休肝日</p>
+                <p><%= t '.no_alcohol_day' %></p>
               <div class="badge badge-primary">primary</div>
               <div class="badge badge-primary">primary</div>
               <div class="badge badge-primary">primary</div>
@@ -22,27 +22,27 @@
           <h2 class="title-font text-xl font-semibold text-neutral-900 mb-4"><%= @user.username %></h2>
           <p><%= @user.comment %></p>
           <div class="text-right">
-            <%= link_to 'プロフィール編集', edit_profile_path, class:"link text-xs" %>
+            <%= link_to (t 'profiles.edit.title'), edit_profile_path, class:"link text-xs" %>
           </div>
 
         </div>
         <div class="w-full">
-          <p class="">グループ</p>
+          <p class=""><%= t 'defaults.group' %></p>
           <div class="btn-neutral-100 btn w-full">グループ</div>
           <div class="text-right">
-            <a class="link text-xs">グループの作成</a>
+            <a class="link text-xs"><%= t '.create_group' %></a>
           </div>
         </div>
-        <div>記録</div>
+        <div><%= t 'defaults.record' %></div>
         <div class="stats stats-vertical my-2 w-full bg-accent-content shadow sm:stats-horizontal md:stats-vertical">
           <div class="stat">
-            <div class="stat-title">休肝日達成率（1ヶ月間）</div>
+            <div class="stat-title"><%= t '.no_alcohol_day_achievement' %></div>
             <div class="stat-value">31%</div>
             <div class="stat-desc">Jan 1st - Feb 1st</div>
           </div>
 
           <div class="stat">
-            <div class="stat-title">総アルコール摂取量（1ヶ月）</div>
+            <div class="stat-title"><%= t '.alcohol_intake' %></div>
             <div class="stat-value">4,200</div>
             <div class="stat-desc">↗︎ 400 (22%)</div>
           </div>
@@ -55,8 +55,7 @@
     <div class="flex w-full flex-col p-4">
       <div class="card rounded-box grid h-20 place-items-center bg-base-300">content</div>
       <div class="flex flex-col justify-evenly md:flex-row md:content-evenly">
-        <div class="btn btn-primary m-4">リマインダーを登録</div>
-        <div class="btn btn-secondary m-4">休肝日・飲酒日を記録</div>
+        <div class="btn btn-accent m-4">休肝日・飲酒日を記録</div>
       </div>
       <div class="card rounded-box grid h-20 place-items-center bg-base-300">content</div>
     </div>
