--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -4,19 +4,19 @@
   </div>
   <div class="navbar-end">
     <ul class="menu menu-horizontal invisible px-1 md:visible">
-      <li><a>トップページ</a></li>
-      <li><a>コミュニティ</a></li>
+      <li><a><%= t 'defaults.top_page' %></a></li>
+      <li><a><%= t 'defaults.community' %></a></li>
     </ul>
-    <%= link_to "LINEでログイン", auth_at_provider_path(provider: :line), class: "btn btn-primary" %>
+    <%= link_to t('defaults.login_with_line'), auth_at_provider_path(provider: :line), class: "btn btn-primary" %>
   </div>
-  <div class="dropdown dropdown-end">
+  <div class="dropdown dropdown-end md:hidden">
     <div class="flex-none md:hidden">
       <button class="btn btn-square btn-ghost">
        ･･･ 
       </button>
       <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
-        <li><a>トップページ</a></li>
-        <li><a>コミュニティ</a></li>
+        <li><a><%= t 'defaults.top_page' %></a></li>
+        <li><a><%= t 'defaults.community' %></a></li>
       </ul>
     </div>
   </div>
