--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,10 +4,10 @@
   </div>
   <div class="navbar-end">
     <ul class="menu menu-horizontal invisible px-1 md:visible">
-      <li><a>コミュニティ</a></li>
-      <li><a>グループ</a></li>
+      <li><a><%= t 'defaults.community' %></a></li>
+      <li><a><%= t 'defaults.group' %></a></li>
     </ul>
-    <a class="btn btn-accent">記録</a>
+    <a class="btn btn-accent"><%= t 'defaults.record' %></a>
     <div class="dropdown dropdown-end">
       <div class="flex-none">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar mx-4">
@@ -17,10 +17,10 @@
         </label>
         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
           <li>
-            <%= link_to 'マイページ', profile_path %>
+            <%= link_to t('defaults.my_page'), profile_path %>
           </li>
-          <li class="md:hidden"><a>コミュニティ</a></li>
-          <li class="md:hidden"><a>グループ</a></li>
+          <li class="md:hidden"><a><%= t 'defaults.community' %></a></li>
+          <li class="md:hidden"><a><%= t 'defaults.group' %></a></li>
         </ul>
       </div>
     </div>
