--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -60,7 +60,7 @@
         <% end %>
       </div>
       <div class="flex flex-col justify-evenly md:flex-row md:content-evenly">
-        <div class="btn btn-accent m-4">休肝日・飲酒日を記録</div>
+        <%= link_to '休肝日・飲酒日を記録', new_drink_record_path, class:"btn btn-accent m-4" %>
       </div>
       <div class="card rounded-box grid h-20 place-items-center bg-base-300">content</div>
     </div>
