--- a/app/views/drink_records/_form.html.erb
+++ b/app/views/drink_records/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: drink_record, local: true do |f| %>
   <div class="flex flex-col items-center justify-evenly md:flex-row md:content-evenly">
-    <%= f.radio_button :record_type, "no_drink", class: "btn btn-primary btn-outline join-item m-4 px-12", "aria-label": :"休肝日" %>
-    <%= f.radio_button :record_type, "drink", class: "btn btn-secondary btn-outline join-item m-4 px-12", "aria-label": :"飲酒日" %>
+    <%= f.radio_button :record_type, "no_drink", class: "btn btn-primary btn-outline join-item m-4 px-12", "aria-label": :"休肝日", id: "hide", onclick:"buttonClick()" %>
+    <%= f.radio_button :record_type, "drink", class: "btn btn-secondary btn-outline join-item m-4 px-12", "aria-label": :"飲酒日" , id: "disp", onclick:"buttonClick()"%>
   </div>
   <div id="drink-details">
     <div class="mx-8 border-b-2 font-semibold"><%= t 'defaults.detail' %></div>
