--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "application", "calendar", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= javascript_import_module_tag "controllers/alcohol_calculator" %>
+    <%= javascript_import_module_tag "controllers/record_form" %>
   </head>
 
   <body>
