--- a/app/views/drink_records/_form.html.erb
+++ b/app/views/drink_records/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: drink_record, local: true do |f| %>
   <div class="flex flex-col items-center justify-evenly md:flex-row md:content-evenly">
-    <%= f.radio_button :record_type, "no_drink", class: "btn btn-primary btn-outline join-item m-4 px-12", "aria-label": :"休肝日", id: "hide", onclick:"buttonClick()" %>
-    <%= f.radio_button :record_type, "drink", class: "btn btn-secondary btn-outline join-item m-4 px-12", "aria-label": :"飲酒日" , id: "disp", onclick:"buttonClick()"%>
+    <%= f.radio_button :record_type, "no_drink", class: "btn btn-primary btn-outline join-item m-4 px-12 js-check", "aria-label": :"休肝日", id: "hide" %>
+    <%= f.radio_button :record_type, "drink", class: "btn btn-secondary btn-outline join-item m-4 px-12 js-check", "aria-label": :"飲酒日" , id: "disp" %>
   </div>
   <div id="drink-details">
     <div class="mx-8 border-b-2 font-semibold"><%= t 'defaults.detail' %></div>
@@ -17,14 +17,14 @@
       <div class="form-control mb-4 flex w-full flex-row items-center">
         <%= f.label :drink_volume, class: "label mr-8 w-44" %>
         <div class="flex flex-row items-center">
-          <%= f.number_field :drink_volume, class: "input input-bordered w-full max-w-xs", id: "drink_volume" %>
+          <%= f.number_field :drink_volume, class: "input input-bordered w-full max-w-xs", id: "drink_volume", min: 0 %>
           <div class="ml-4 font-semibold">ml</div>
         </div>
       </div>
       <div class="form-control mb-4 flex w-full flex-row items-center">
         <%= f.label :alcohol_percentage, class: "label mr-8 w-44" %>
         <div class="flex flex-row items-center">
-          <%= f.number_field :alcohol_percentage, class: "input input-bordered w-full max-w-xs", id: "alcohol_percentage" %>
+          <%= f.number_field :alcohol_percentage, class: "input input-bordered w-full max-w-xs", id: "alcohol_percentage", in: 0..100, step: 0.1 %>
           <div class="ml-4 font-semibold">%</div>
         </div>
       </div>
