--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -64,9 +64,9 @@
           <div><%= date.day %></div>
           <% drink_record.each do |record| %>
             <% if record.no_drink? %>
-              <div class="badge badge-xs badge-primary md:badge-sm lg:badge-md"><%= record.record_type_i18n %></div>
+              <%= link_to record.record_type_i18n, drink_record_path(record), class:"badge badge-xs badge-primary md:badge-sm lg:badge-md", data: { turbo: false } %>
             <% elsif record.drink? %>
-              <div class="badge badge-xs badge-secondary md:badge-sm lg:badge-md"><%= record.record_type_i18n %></div>
+              <%= link_to record.record_type_i18n, drink_record_path(record), class:"badge badge-xs badge-secondary md:badge-sm lg:badge-md", data: { turbo: false } %>
             <% end %>
           <% end %>
         <% end %>
