--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,4 +1,4 @@
-<div class="hero mt-12 min-h-max bg-base-100">
+<div class="hero mt-12 min-h-max bg-base-100 flex-auto">
   <div class="hero-content max-w-full text-center">
     <div class="max-w-full">
       <h1 class="text-5xl font-bold">肝ログ</h1>
