--- a/app/views/drink_records/_form.html.erb
+++ b/app/views/drink_records/_form.html.erb
@@ -3,35 +3,35 @@
     <%= f.radio_button :record_type, "no_drink", class: "btn btn-primary btn-outline join-item m-4 px-12 js-check", "aria-label": :"休肝日", id: "hide" %>
     <%= f.radio_button :record_type, "drink", class: "btn btn-secondary btn-outline join-item m-4 px-12 js-check", "aria-label": :"飲酒日" , id: "disp" %>
   </div>
-  <div class="m-8">
+  <div class="md:p-8 p-4">
     <div class="form-control mb-4 flex w-full flex-row items-center">
-      <%= f.label :start_time, class: "label mr-8 w-44" %>
+      <%= f.label :start_time, class: "label md:mr-8 md:w-44 mr-4 w-24" %>
       <%= f.date_field :start_time, class: "input input-bordered w-full max-w-xs", value: Date.today.strftime("%Y-%m-%d") %>
     </div>
   </div>
   <div id="drink-details">
     <div class="mx-8 border-b-2 font-semibold"><%= t 'defaults.detail' %></div>
-    <div class="m-8">
+    <div class="md:p-8 p-4">
       <div class="form-control mb-4 flex w-full flex-row items-center">
-        <%= f.label :drink_type, class: "label mr-8 w-44" %>
+        <%= f.label :drink_type, class: "label md:mr-8 md:w-44 mr-4 w-24" %>
         <%= f.text_field :drink_type, class: "input input-bordered w-full max-w-xs" %>
       </div>
       <div class="form-control mb-4 flex w-full flex-row items-center">
-        <%= f.label :drink_volume, class: "label mr-8 w-44" %>
+        <%= f.label :drink_volume, class: "label md:mr-8 md:w-44 mr-4 w-24" %>
         <div class="flex flex-row items-center">
           <%= f.number_field :drink_volume, class: "input input-bordered w-full max-w-xs", id: "drink_volume", min: 0 %>
           <div class="ml-4 font-semibold">ml</div>
         </div>
       </div>
       <div class="form-control mb-4 flex w-full flex-row items-center">
-        <%= f.label :alcohol_percentage, class: "label mr-8 w-44" %>
+        <%= f.label :alcohol_percentage, class: "label md:mr-8 md:w-44 mr-4 w-24" %>
         <div class="flex flex-row items-center">
           <%= f.number_field :alcohol_percentage, class: "input input-bordered w-full max-w-xs", id: "alcohol_percentage", in: 0..100, step: 0.1 %>
           <div class="ml-4 font-semibold">%</div>
         </div>
       </div>
       <div class="form-control mb-4 flex w-full flex-row items-center">
-        <label class="label mr-8 w-44 font-semibold"><%= t 'defaults.amount_of_alcohol' %></label>
+        <label class="label md:mr-8 md:w-44 mr-4 w-24 font-semibold"><%= t 'defaults.amount_of_alcohol' %></label>
         <div class="flex flex-row items-center">
           <div id="alcohol_intake", class="font-semibold">
             <%= alcohol_caluculate(drink_record.drink_volume, drink_record.alcohol_percentage) %>
