--- a/app/views/static_pages/first_login.html.erb
+++ b/app/views/static_pages/first_login.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto max-w-4xl overflow-hidden bg-base-100 py-4 sm:px-24 sm:py-24">
+<div class="mx-auto max-w-4xl overflow-hidden bg-base-100 py-4 sm:px-24 sm:py-24 flex-auto">
   <div class="card mx-8 max-w-full rounded-xl bg-white shadow-xl">
     <div class="card-body mx-auto items-center text-center">
       <h2 class="card-title"><%= t '.form_title' %></h2>
