--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -3,6 +3,7 @@
     <%= f.label :name, class: "label" %>
     <%= f.text_field :name, class: "input input-bordered w-full max-w-xs" %>
   </div>
+  <%= f.hidden_field :group_admin_id, value: current_user.id %>
   <div class="card-actions justify-end">
     <%= f.submit (t 'defaults.register'), class: "btn btn-primary" %>
   </div>
