--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,6 +6,7 @@
           <h2 class="title-font text-2xl font-semibold text-neutral-900 mb-4"><%= @group.name %></h2>
           <div class="text-right">
             <%= link_to (t '.edit'), edit_group_path, class:"link text-xs" %>
+            <%= link_to (t '.delete'), group_path, class:"link text-xs", data: { turbo_method: :delete, confirm: t("defaults.delete_confirm") }  %>
           </div>
         </div>
         <div class="mb-4">
