Add:招待機能の追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,6 @@
     <%= render "shared/flash_message" %>
     <%= yield %>
     <%= render "shared/footer" %>
+    <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
   </body>
 </html>
