--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -4,7 +4,7 @@
       <h1 class="text-5xl font-bold">肝ログ</h1>
       <h2 class="text-2xl">LiverLog</h2>
       <p class="py-8">肝ログ（LiverLog）は、休肝日と飲酒日を記録することで、飲酒管理ができるサービスです。</p>
-      <%= link_to "LINEでログイン", auth_at_provider_path(provider: :line), class: "btn btn-primary" %>
+      <%= link_to t('defaults.login_with_line'), auth_at_provider_path(provider: :line), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
