--- a/app/views/profiles/_groups.html.erb
+++ b/app/views/profiles/_groups.html.erb
@@ -1,5 +1,3 @@
 <% user.groups.each do |group| %>
-  <div class="btn-neutral-100 btn w-full">
-    <%= link_to group.name, group_path(group), data: { turbo: false } %>
-  </div>
+  <%= link_to group.name, group_path(group),class: "btn btn-neutral-100 w-full", data: { turbo: false } %>
 <% end %>
