Add:グループに記録をポストする機能の追加

--- a/app/views/drink_records/_form.html.erb
+++ b/app/views/drink_records/_form.html.erb
@@ -36,7 +36,7 @@
           <div id="alcohol_intake", class="font-semibold">
             <%= alcohol_caluculate(drink_record.drink_volume, drink_record.alcohol_percentage) %>
           </div>
-          <div class="ml-4 font-semibold">ml</div>
+          <div class="ml-4 font-semibold">g</div>
         </div>
       </div>
     </div>
