--- a/app/views/drink_records/show.html.erb
+++ b/app/views/drink_records/show.html.erb
@@ -40,7 +40,7 @@
         <label class="label mr-8 w-44 font-semibold"><%= t 'defaults.amount_of_alcohol' %></label>
         <div class="flex flex-row items-center">
           <div class="font-semibold"><%= alcohol_caluculate(@drink_record.drink_volume, @drink_record.alcohol_percentage) %></div>
-          <div class="ml-4 font-semibold">ml</div>
+          <div class="ml-4 font-semibold">g</div>
         </div>
       </div>
       <div class="card-actions justify-end">
