--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col p-4 md:flex-row md:p-8 flex-auto">
+<div class="flex flex-col p-4 md:flex-row md:p-8 flex-auto max-w-6xl mx-auto">
   <div class="flex flex-col md:w-1/3">
     <div class="card p-4 bg-primary bg-opacity-50">
       <h2 class="title-font text-2xl font-semibold text-neutral-900"><%= @group.name %></h2>
@@ -36,7 +36,7 @@
               <% @group.users.each do |user| %>
                 <div class="flex flex-row items-center p-4 text-left md:text-left border border-primary rounded-lg">
                   <div class="avatar">
-                    <div class="h-24 w-24 rounded-full">
+                    <div class="h-12 w-12 rounded-full">
                       <%= image_tag user.image %>
                     </div>
                   </div>
@@ -97,12 +97,6 @@
         </div>
       </div>
     </div>
-    <div class="card rounded-box flex-col bg-white shadow-xl max-w-full my-8">
-      <div class="flex w-full flex-col p-4">
-        <div class="card rounded-box grid">
-          <h2 class="text-xl font-semibold text-center"><%= t 'defaults.record' %></h2>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'groups/posts', locals: { group: @group } %>
   </div>
 </div>
