--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,10 +1,10 @@
-<div class="flex flex-col p-4 md:flex-row md:p-8 flex-auto">
+<div class="flex flex-col p-4 md:flex-row md:p-8 flex-auto max-w-6xl mx-auto">
   <div class="card rounded-box flex-grow place-items-center bg-white shadow-xl md:w-1/3">
     <div class="w-full p-4">
       <div class="h-full flex-row items-center justify-center text-left md:justify-start md:text-left">
         <div class="flex flex-row items-center pl-2 text-left md:text-left">
           <div class="avatar">
-            <div class="h-24 w-24 lg:w-36 lg:h-36 rounded-full">
+            <div class="h-24 w-24 rounded-full">
               <%= image_tag @user.image %>
             </div>
           </div>
