Add:ページタイトルの追加

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, t(".title")) %>
 <div class="hero mt-12 min-h-max bg-base-100 flex-auto">
   <div class="hero-content max-w-full text-center">
     <div class="max-w-full">
