--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, @group.name) %>
 <div class="flex flex-col p-4 md:flex-row md:p-8 flex-auto max-w-6xl mx-auto">
   <div class="flex flex-col md:w-1/3">
     <div class="card p-4 bg-primary bg-opacity-50">
