Add:ポストへのコメント機能の追加

--- a/app/views/groups/_posts.html.erb
+++ b/app/views/groups/_posts.html.erb
@@ -1,6 +1,6 @@
 <% if group.posts.present? %>
   <% group.posts.each do |post| %>
-    <div class="flex flex-row card rounded-box bg-white shadow-xl w-full mt-4 p-4">
+    <%= link_to group_post_path(group, post), class: "flex flex-row card rounded-box bg-white shadow-xl w-full mt-4 p-4", id: "post-#{post.id}" do %>
       <div class="avatar">
         <div class="h-12 w-12 rounded-full">
           <%= image_tag post.user.image %>
@@ -13,7 +13,7 @@
         </div>
         <div class="text-neutral-900"><%= post.content %></div>
       </div> 
-    </div>
+    <% end %>
   <% end %>
 <% else %>
   <div class="card rounded-box flex-col bg-white shadow-xl w-full my-8">
