--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -82,24 +82,7 @@
             <% end %>
           <% end %>
           <p class="text-xl font-semibold"><%= t 'defaults.record' %></p>
-          <div class="stats stats-vertical my-2 w-full bg-accent-content shadow md:stats-horizontal md:grid-cols-2">
-            <div class="stat">
-              <div class="stat-title"><%= t '.no_alcohol_day_achievement' %></div>
-              <div class="stat-value"><%= @group.group_admin.monthly_no_drink_achievement %>%</div>
-              <div class="stat-desc"><%= Date.today.beginning_of_month %> - <%= Date.today%></div>
-            </div>
-            <div class="stat">
-              <div class="stat-title"><%= t '.alcohol_intake' %></div>
-              <div class="stat-value"><%= @group.group_admin.monthly_total_amount_alcohol %>ml</div>
-              <% if @group.group_admin.compare_amount_last_manth_total_amount_alcohol > 0 %>
-                <div class="stat-desc">↗︎ <%= @group.group_admin.compare_amount_last_manth_total_amount_alcohol %>ml (<%= @group.group_admin.compare_rate_last_manth_total_amount_alcohol %>%)</div>
-              <% elsif @group.group_admin.compare_amount_last_manth_total_amount_alcohol < 0 %>
-                <div class="stat-desc">↘︎ <%= @group.group_admin.compare_amount_last_manth_total_amount_alcohol %>ml (<%= @group.group_admin.compare_rate_last_manth_total_amount_alcohol %>%)</div>
-              <% else %>
-                <div class="stat-desc">- <%= @group.group_admin.compare_amount_last_manth_total_amount_alcohol %>ml (<%= @group.group_admin.compare_rate_last_manth_total_amount_alcohol %>%)</div>
-              <% end %>
-            </div>
-          </div>
+          <%= render 'shared/drink_record_summary', { user: @group.group_admin } %>
         </div>
       </div>
     </div>
