Add:いいねボタンの修正

--- a/app/views/shared/_like_btn.html.erb
+++ b/app/views/shared/_like_btn.html.erb
@@ -6,6 +6,6 @@
     <% else %>
       <%= render 'shared/like', { post: post } %>
     <% end %>
-    <%= post.post_likes.count %>
+    <%= t('defaults.likes') %>:<%= post.post_likes.count %>
   </li>
 </ul> 
