--- a/app/views/post_comments/_post_comment.html.erb
+++ b/app/views/post_comments/_post_comment.html.erb
@@ -17,7 +17,7 @@
     <td class="action">
       <ul class="list-inline justify-center" style="float: right;">
         <li class="list-inline-item">
-          <%= link_to post_comment_path(post_comment), class: 'js-edit-comment-button', "data-comment-id": "#{post_comment.id}", data: { turbo_method: :delete, confirm: t("defaults.delete_confirm") } do %>
+          <%= link_to post_comment_path(post_comment), class: 'js-edit-comment-button', id: "delete-comment-#{post_comment.id}", data: { turbo_method: :delete, confirm: t("defaults.delete_confirm") } do %>
             <i class="fa-solid fa-trash-can"></i>
           <% end %>
         </li>
