--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, @post.drink_record.start_time.strftime("%F") + t(".title")) %>
-<div class="mx-auto max-w-4xl overflow-hidden bg-base-100 py-4 sm:px-24 sm:py-24 flex-auto">
+<div class="mx-auto max-w-4xl overflow-hidden bg-base-100 py-4 flex-auto">
   <div class="max-w-full mx-auto sm:px-4 pt-5">
     <div class="flex flex-row mb-3">
       <div class="px-4">
