--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,7 +1,6 @@
 <% content_for(:title, t(".title")) %>
-<div class="hero bg-base-100 flex-auto min-h-full" style="background-image: url(<%= asset_path "toppage_sample.jpg" %>);">
-  <div class="hero-overlay bg-opacity-60"></div>
-  <div class="hero-content max-w-max text-center py-12">
+<div class="hero bg-base-100 flex-auto" style="background-image: url(<%= asset_path "toppage_sample.jpg" %>);">
+  <div class="hero-content max-w-full text-center py-12 bg-opacity-for-topimage">
     <div class="max-w-full">
       <h1 class="text-5xl font-bold">肝ログ</h1>
       <h2 class="text-2xl">LiverLog</h2>
